# template_python

./: .flake8  Dockerfile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: template_cleanup_bug.yml  template_feature_request.yml
.github/workflows/: base.yml  cleanup.yml  python.yml
examples/: main.py
python_template/: __init__.py
script/: rename.sh
